--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Immigrations</title>
+    <link rel="shortcut icon" href="img/immigrations.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
-
-
-
-
+<div class="logo">
+    <img src="img/logo.svg" alt="logo">
+</div>
 
 
 
