--- a/index.html
+++ b/index.html
@@ -9,9 +9,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="logo">
-    <img src="img/logo.svg" alt="logo">
-</div>
+    <header class="header">
+
+
+
+        <nav class="header__menu">
+            <a class="header__logo" href="#">
+                <img class="header__logo_img" src="img/logo.png" alt="logo">
+            </a>
+            <div class="header__nav">
+                <ul class="menu__list">
+                    <li class="menu__item">
+                        <a href="#" class="menu__item_link">ГЛАВНАЯ</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__item_link">ПРАВИЛА</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__item_link">ЦЕНЫ</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__item_link">БАНЛИСТ</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__item_link">КОНТАКТЫ</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
+    </header>
 
 
 
