adding main block

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <header class="header">
-
-
-
         <nav class="header__menu">
             <a class="header__logo" href="#">
                 <img class="header__logo_img" src="img/logo.png" alt="logo">
@@ -37,9 +34,15 @@
                 </ul>
             </div>
         </nav>
-        
     </header>
-
+    <section class="page__main-block">
+        <div class="page__main-text">
+            <h1 class="page__main-text_title">Immigration public</h1>
+            <p class="page__main-text_desc">Лучшый паблик на котором ты можешь поиграть.</p>
+            <a class="page__main_btn" href="#">Connect</a>
+        </div>
+        <img class="page__main-img" src="img/main-block-icon.svg" alt="img">
+    </section>
 
 
 
