--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <a class="page__main_btn" href="#">Connect</a>
         </div>
         <img class="page__main-img" src="img/main-block-icon.svg" alt="img">
+        <div class="page__main-more">
+            <p class="page__main-more_text">Дальше</p>
+            <img class="page__main-more_icon" src="img/more-icon.svg" alt="more">
+        </div>
     </section>
 
 
