adding rules block

--- a/index.html
+++ b/index.html
@@ -47,7 +47,25 @@
             <img class="page__main-more_icon" src="img/more-icon.svg" alt="more">
         </div>
     </section>
-
+    <section class="page__rules">
+        <h1 class="page__rules_title">Правила</h1>
+        <div class="rules__container">
+            <ul class="rules__list">
+                <li class="rules__list_item">1. Использовать VOICE (VоIP)chat лицам, не достигшим 14-ти летнего возраста.* В данном случае, администрация вправе предоставлять исключения.</li>
+                <li class="rules__list_item">2. Оскорбление других игроков, их родственников, знакомых, а также третьих лиц.</li>
+                <li class="rules__list_item">3. Использование ссылок на другие сервера/сайты в нике/тэге.</li>
+                <li class="rules__list_item">4. Разжигание межнациональной и религиозной розни.</li>
+                <li class="rules__list_item">5. Чрезмерное употребление ненормативной лексики.* В данном случае, степень и мера использования ненормативной лексики оценивается администрацией сервера в каждом конкретном случае. Также это подлежит апелляции в разделе "Заявка на разбан".</li>
+                <li class="rules__list_item">6. Реклама / спам.</li>
+                <li class="rules__list_item">7. Читерство и использование любого софта, дающее нечестное преимущество.</li>
+                <li class="rules__list_item">8. Запрещено появляться на сервере с ником,тегом и аватаром, которые содержат мат либо оскорбления, описанные в пункте 2.</li>
+                <li class="rules__list_item">9. Никнейм должен быть читабельным. Пустой ник не допускается. (Русский, Английский, Украинский языки).</li>
+                <li class="rules__list_item">10. Мешать игровому процессу на сервере, путем неподобающего поведения.*В данном случае имеется в виду действия игрока, направленные на препятствие исполнению задачи режима, а также демонстрации явного неуважения к правилам, админам и/или игрокам.</li>
+                <li class="rules__list_item">11. Администратор имеет право требовать открыть профиль у игрока, который его скрыл. Также, администратор имеет право поддерживать порядок на сервере любыми доступными средствами, включая мут, кик и бан. В случае игнорирования требований администрации, игрок получает бан на 30 минут, который не подлежит обжалованию.</li>
+                <li class="rules__list_item">12. Апелляции подаются либо в Дискорде паблика, либо в Телеграме паблика.</li>
+            </ul>
+        </div>
+    </section>
 
 
 
