updating rules block

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <section class="page__rules">
         <h1 class="page__rules_title">Правила</h1>
         <div class="rules__container">
+            <h2 class="rules__container_title">Запрещено</h2>
             <ul class="rules__list">
                 <li class="rules__list_item">1. Использовать VOICE (VоIP)chat лицам, не достигшим 14-ти летнего возраста.* В данном случае, администрация вправе предоставлять исключения.</li>
                 <li class="rules__list_item">2. Оскорбление других игроков, их родственников, знакомых, а также третьих лиц.</li>
