adding prices block

--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
             </ul>
         </div>
     </section>
-
+    <section class="page__prices">
+        <h1 class="price__title">Цены</h1>
+        <div class="donate-container">
+            <div class="donate-block__vip">
+                <div class="donate-block__vip_title">Immigration public</div>
+                <div class="privilege__name">VIP</div>
+            </div>
+            <div class="donate-block__admin">
+                <div class="donate-block__admin_title">Immigration public</div>
+                <div class="privilege__name">Admin</div>
+            </div>
+        </div>
+    </section>
 
 
 
