adding subscribtadding subscription for prices blockion for block

--- a/index.html
+++ b/index.html
@@ -73,16 +73,34 @@
             <div class="donate-block__vip">
                 <div class="donate-block__vip_title">Immigration public</div>
                 <div class="privilege__name">VIP</div>
+                <div class="select">
+                    <input class="select__input" type="hidden" name="">
+                    <div class="select__head">Выберите план подписки</div>
+                    <ul class="select__list" style="display: none;">
+                        <li class="select__item">Vip на 30дней - 50грн.</li>
+                        <li class="select__item">Vip на 60дней - 90грн.</li>
+                        <li class="select__item">Vip на 120дней - 160грн.</li>
+                    </ul>
+                </div>
             </div>
             <div class="donate-block__admin">
                 <div class="donate-block__admin_title">Immigration public</div>
                 <div class="privilege__name">Admin</div>
+                <div class="select">
+                    <input class="select__input" type="hidden" name="">
+                    <div class="select__head">Выберите план подписки</div>
+                    <ul class="select__list" style="display: none;">
+                        <li class="select__item">Admin на 30дней - 100грн.</li>
+                        <li class="select__item">Admin на 60дней - 180грн.</li>
+                        <li class="select__item">Admin на 120дней - 320грн.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
