adding advantages privilege for prices block

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
                         <li class="select__item">Vip на 120дней - 160грн.</li>
                     </ul>
                 </div>
+                <h3 class="privilege-vip">Преимущества Vip-подписки</h3>
+                <ul class="privilege-vip__list">
+                    <li class="privilege-vip__list_item">Преимущество Vip №1</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №2</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №3</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №4</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №5</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №6</li>
+                    <li class="privilege-vip__list_item">Преимущество Vip №7</li>
+                </ul>
             </div>
             <div class="donate-block__admin">
                 <div class="donate-block__admin_title">Immigration public</div>
@@ -95,6 +105,16 @@
                         <li class="select__item">Admin на 120дней - 320грн.</li>
                     </ul>
                 </div>
+                <h3 class="privilege-admin">Преимущества Admin-подписки</h3>
+                <ul class="privilege-admin__list">
+                    <li class="privilege-admin__list_item">Преимущество Admin №1</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №2</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №3</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №4</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №5</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №6</li>
+                    <li class="privilege-admin__list_item">Преимущество Admin №7</li>
+                </ul>
             </div>
         </div>
     </section>
