updating prices block

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                     <li class="privilege-vip__list_item">Преимущество Vip №6</li>
                     <li class="privilege-vip__list_item">Преимущество Vip №7</li>
                 </ul>
+                <div class="line"></div>
+                <a class="privilege__more" href="#">Больше</a>
+                <div class="privilege__price">50<p>грн</p></div>
+                <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
             <div class="donate-block__admin">
                 <div class="donate-block__admin_title">Immigration public</div>
@@ -115,6 +119,10 @@
                     <li class="privilege-admin__list_item">Преимущество Admin №6</li>
                     <li class="privilege-admin__list_item">Преимущество Admin №7</li>
                 </ul>
+                <div class="line"></div>
+                <a class="privilege__more" href="#">Больше</a>
+                <div class="privilege__price">100<p>грн</p></div>
+                <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
         </div>
     </section>
