addins page contacts block

--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
             </div>
         </div>
     </section>
+    <section class="page__contacts">
+        <h1 class="contacts__title">Контакты</h1>
+        <div class="contacts-block">
+            <div class="contacts-block__title">Зв’язатись з адміном</div>
+            <div class="contacts-block__buttons">
+                <div class="buttons__item">
+                    <a href="" class="buttons__item_link">Telegram</a>
+                </div>
+                <div class="buttons__item">
+                    <a href="" class="buttons__item_link">Steam</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
