updating contacts block & adding footer

--- a/index.html
+++ b/index.html
@@ -129,18 +129,16 @@
     <section class="page__contacts">
         <h1 class="contacts__title">Контакты</h1>
         <div class="contacts-block">
-            <div class="contacts-block__title">Зв’язатись з адміном</div>
+            <div class="contacts-block__title">Контакты сервера</div>
             <div class="contacts-block__buttons">
-                <div class="buttons__item">
-                    <a href="" class="buttons__item_link">Telegram</a>
-                </div>
-                <div class="buttons__item">
-                    <a href="" class="buttons__item_link">Steam</a>
-                </div>
+                    <a href="" class="btn__item-link_telegram"><img src="img/telegram-icon.svg" alt="tgIcon">Telegram</a>
+                    <a href="" class="btn__item-link_discord"><img src="img/discord-icon.svg" alt="dsIcon">Discord</a>
             </div>
         </div>
     </section>
-
+    <section class="page__footer">
+        <div class="page__footer_title">© 2021 Immigration public</div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/script.js"></script>
