updating prices block

--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/scroll.js"></script>
 </body>
 </html>
