updating header & restructuring files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="header__menu">
             <a class="header__logo" href="#">
-                <img class="header__logo_img" src="img/logo.png" alt="logo">
+                <img class="header__logo_img" src="img/logo.svg" alt="logo">
             </a>
             <div class="header__nav">
                 <ul class="menu__list">
@@ -141,7 +141,8 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/scroll.js"></script>
+    <script src="scripts/price-list.js"></script>
+    <script src="scripts/navbar-scroll.js"></script>
+    <!-- <script src="scripts/app.js"></script> -->
 </body>
 </html>
