updating titles of blocks & updating price block

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <input class="select__input" type="hidden" name="">
                     <div class="select__head">Выберите план подписки</div>
                     <ul class="select__list" style="display: none;">
-                        <li class="select__item">Vip на 30дней - 50грн.</li>
-                        <li class="select__item">Vip на 60дней - 90грн.</li>
-                        <li class="select__item">Vip на 120дней - 160грн.</li>
+                        <li class="select__item_vip">Vip на 30дней - 50грн.</li>
+                        <li class="select__item_vip">Vip на 60дней - 90грн.</li>
+                        <li class="select__item_vip">Vip на 120дней - 160грн.</li>
                     </ul>
                 </div>
                 <h3 class="privilege-vip">Преимущества Vip-подписки</h3>
@@ -94,7 +94,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price">50<p>грн</p></div>
+                <div class="privilege__price_vip">50<p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
             <div class="donate-block__admin">
@@ -104,9 +104,9 @@
                     <input class="select__input" type="hidden" name="">
                     <div class="select__head">Выберите план подписки</div>
                     <ul class="select__list" style="display: none;">
-                        <li class="select__item">Admin на 30дней - 100грн.</li>
-                        <li class="select__item">Admin на 60дней - 180грн.</li>
-                        <li class="select__item">Admin на 120дней - 320грн.</li>
+                        <li class="select__item_admin">Admin на 30дней - 100грн.</li>
+                        <li class="select__item_admin">Admin на 60дней - 180грн.</li>
+                        <li class="select__item_admin">Admin на 120дней - 320грн.</li>
                     </ul>
                 </div>
                 <h3 class="privilege-admin">Преимущества Admin-подписки</h3>
@@ -121,7 +121,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price">100<p>грн</p></div>
+                <div class="privilege__price_admin">100<p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
         </div>
@@ -143,6 +143,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/price-list.js"></script>
     <script src="scripts/navbar-scroll.js"></script>
-    <!-- <script src="scripts/app.js"></script> -->
+    <script src="scripts/script.js"></script>
 </body>
 </html>
