updating price form

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="page__main-block">
         <div class="page__main-text">
             <h1 class="page__main-text_title">Immigration public</h1>
-            <p class="page__main-text_desc">Лучшый паблик на котором ты можешь поиграть.</p>
+            <p class="page__main-text_desc">Лучшый паблик, на котором ты можешь поиграть.</p>
             <a class="page__main_btn" href="#">Connect</a>
         </div>
         <img class="page__main-img" src="img/main-block-icon.svg" alt="img">
@@ -77,9 +77,9 @@
                     <input class="select__input" type="hidden" name="">
                     <div class="select__head">Выберите план подписки</div>
                     <ul class="select__list" style="display: none;">
-                        <li class="select__item_vip">Vip на 30дней - 50грн.</li>
-                        <li class="select__item_vip">Vip на 60дней - 90грн.</li>
-                        <li class="select__item_vip">Vip на 120дней - 160грн.</li>
+                        <li class="select__item_vip" onclick="checkPrice()">Vip на 30дней - 50грн.</li>
+                        <li class="select__item_vip" onclick="checkPrice()">Vip на 60дней - 90грн.</li>
+                        <li class="select__item_vip" onclick="checkPrice()">Vip на 120дней - 160грн.</li>
                     </ul>
                 </div>
                 <h3 class="privilege-vip">Преимущества Vip-подписки</h3>
