updating price block & adding functionality

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <input class="select__input" type="hidden" name="">
                     <div class="select__head">Выберите план подписки</div>
                     <ul class="select__list" style="display: none;">
-                        <li class="select__item_vip" onclick="checkPrice()">Vip на 30дней - 50грн.</li>
-                        <li class="select__item_vip" onclick="checkPrice()">Vip на 60дней - 90грн.</li>
-                        <li class="select__item_vip" onclick="checkPrice()">Vip на 120дней - 160грн.</li>
+                        <li class="select__item_vip">Vip на 30дней - 50грн.</li>
+                        <li class="select__item_vip">Vip на 60дней - 90грн.</li>
+                        <li class="select__item_vip">Vip на 120дней - 160грн.</li>
                     </ul>
                 </div>
                 <h3 class="privilege-vip">Преимущества Vip-подписки</h3>
@@ -94,7 +94,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price_vip">50<p>грн</p></div>
+                <div class="privilege__price_vip"><div class="price_vip">0</div><p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
             <div class="donate-block__admin">
@@ -121,7 +121,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price_admin">100<p>грн</p></div>
+                <div class="privilege__price_admin"><div class="price_admin">0</div><p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
         </div>
