updating price block

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="privilege__name">VIP</div>
                 <div class="select">
                     <input class="select__input" type="hidden" name="">
-                    <div class="select__head">Выберите план подписки</div>
+                    <div class="select__head">Vip на 30дней - 50грн.</div>
                     <ul class="select__list" style="display: none;">
                         <li class="select__item_vip">Vip на 30дней - 50грн.</li>
                         <li class="select__item_vip">Vip на 60дней - 90грн.</li>
@@ -94,7 +94,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price_vip"><div class="price_vip">0</div><p>грн</p></div>
+                <div class="privilege__price_vip"><div class="price_vip">50</div><p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
             <div class="donate-block__admin">
@@ -102,7 +102,7 @@
                 <div class="privilege__name">Admin</div>
                 <div class="select">
                     <input class="select__input" type="hidden" name="">
-                    <div class="select__head">Выберите план подписки</div>
+                    <div class="select__head">Admin на 30дней - 100грн.</div>
                     <ul class="select__list" style="display: none;">
                         <li class="select__item_admin">Admin на 30дней - 100грн.</li>
                         <li class="select__item_admin">Admin на 60дней - 180грн.</li>
@@ -121,7 +121,7 @@
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#">Больше</a>
-                <div class="privilege__price_admin"><div class="price_admin">0</div><p>грн</p></div>
+                <div class="privilege__price_admin"><div class="price_admin">100</div><p>грн</p></div>
                 <a class="privilege__buy_btn" href="#">Купить</a>
             </div>
         </div>
