adding popup structure

--- a/index.html
+++ b/index.html
@@ -139,7 +139,25 @@
     <section class="page__footer">
         <div class="page__footer_title">© 2021 Immigration public</div>
     </section>
-
+    <div class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <a href="" class="popup__close"></a>
+                <div class="popup__title">Преимущества Vip-подписки</div>
+                <div class="popup__text">
+                    <ul>
+                        <li>Преимущество Vip №1</li>
+                        <li>Преимущество Vip №2</li>
+                        <li>Преимущество Vip №3</li>
+                        <li>Преимущество Vip №4</li>
+                        <li>Преимущество Vip №5</li>
+                        <li>Преимущество Vip №6</li>
+                        <li>Преимущество Vip №7</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/price-list.js"></script>
     <script src="scripts/navbar-scroll.js"></script>
