--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
             <div class="header__nav">
                 <ul class="menu__list" id="header">
                     <li class="menu__item">
-                        <a href="#" class="menu__item_link">ГЛАВНАЯ</a>
+                        <a href="#main" class="menu__item_link">ГЛАВНАЯ</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__item_link">ПРАВИЛА</a>
+                        <a href="#rules" class="menu__item_link">ПРАВИЛА</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__item_link">ЦЕНЫ</a>
+                        <a href="#price" class="menu__item_link">ЦЕНЫ</a>
                     </li>
                     <li class="menu__item">
                         <a href="#" class="menu__item_link">БАНЛИСТ</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__item_link">КОНТАКТЫ</a>
+                        <a href="#contacts" class="menu__item_link">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <section class="page__main-block">
+    <section class="page__main-block" id="main">
         <div class="page__main-text">
             <h1 class="page__main-text_title">Immigration public</h1>
             <p class="page__main-text_desc">Лучшый паблик, на котором ты можешь поиграть.</p>
@@ -47,7 +47,7 @@
             <img class="page__main-more_icon" src="img/more-icon.svg" alt="more">
         </div>
     </section>
-    <section class="page__rules">
+    <section class="page__rules" id="rules">
         <h1 class="page__rules_title">Правила</h1>
         <div class="rules__container">
             <h2 class="rules__container_title">Запрещено</h2>
@@ -67,7 +67,7 @@
             </ul>
         </div>
     </section>
-    <section class="page__prices">
+    <section class="page__prices" id="price">
         <h1 class="price__title">Цены</h1>
         <div class="donate-container">
             <div class="donate-block__vip">
@@ -126,7 +126,7 @@
             </div>
         </div>
     </section>
-    <section class="page__contacts">
+    <section class="page__contacts" id="contacts">
         <h1 class="contacts__title">Контакты</h1>
         <div class="contacts-block">
             <div class="contacts-block__title">Контакты сервера</div>
