updating bg & updating prices blocks

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="line"></div>
                 <a class="privilege__more" href="#popup_vip">Полный список</a>
                 <div class="privilege__price_vip"><div class="price_vip">50</div><p>грн</p></div>
-                <a class="privilege__buy_btn" href="#">Купить</a>
+                <a class="privilege__buy_btn" href="#popup_buy_vip">Купить</a>
             </div>
             <div class="donate-block__admin">
                 <div class="donate-block__admin_title">Immigration public</div>
@@ -115,15 +115,15 @@
                     <li class="privilege-admin__list_item">КИКАТЬ ИГРОКОВ.</li>
                     <li class="privilege-admin__list_item">БАНИТЬ ИГРОКОВ.</li>
                     <li class="privilege-admin__list_item">МЕНЯТЬ КАРТУ.</li>
-                    <li class="privilege-admin__list_item">ОТКЛЮЧАТЬ МИКРОФОН/ТЕКСТОВЫЙ ЧАТ.</li>
-                    <li class="privilege-admin__list_item">УСТАНАВЛИВАТЬ МАЯК НА ИГРОКА.</li>
+                    <li class="privilege-admin__list_item">ИЗМЕНЯТЬ ИМЕНА ИГРОКАМ.</li>
                     <li class="privilege-admin__list_item">ШЛЕПАТЬ ИГРОКОВ.</li>
                     <li class="privilege-admin__list_item">УБИВАТЬ ИГРОКОВ.</li>
+                    <li class="privilege-admin__list_item">ИЗМЕНЯТЬ ГРАВИТАЦИЮ.</li>
                 </ul>
                 <div class="line"></div>
                 <a class="privilege__more" href="#popup_admin">Полный список</a>
                 <div class="privilege__price_admin"><div class="price_admin">100</div><p>грн</p></div>
-                <a class="privilege__buy_btn" href="#">Купить</a>
+                <a class="privilege__buy_btn" href="#popup_buy_admin">Купить</a>
             </div>
         </div>
     </section>
@@ -187,6 +187,42 @@
                     <li class="privilege-admin__list_item">РЕЗЕРВНЫЙ СЛОТ ДЛЯ СВОБОДНОГО ДОСТУПА К ИГРЕ ВНЕ ЗАВИСИМОСТИ ОТ КОЛИЧЕСТВА ИГРОКОВ НА СЕРВЕРЕ И В КОМАНДЕ, ПОЗВОЛЯЮЩИЙ ВСТУПИТЬ В ИГРУ, НЕ ДОЖИДАЯСЬ СВОЕЙ ОЧЕРЕДИ ВХОДА НА СЕРВЕР И В НАБЛЮДАТЕЛЯХ.</li>
                     <li class="privilege-admin__list_item">НЕТУ ОГРАНИЧЕНИЯ НА ПОКУПКУ ОРУЖИЯ.</li>
                 </ul>
+            </div>
+        </div>
+    </div>
+    <div id="popup_buy_vip" class="popup">
+        <a href="#header" class="popup__area"></a>
+        <div class="popup__body">
+            <div class="popup__content">
+                <a href="#header" class="popup__close"><img src="img/close-icon.svg" alt="X"></a>
+                <div class="popup__title_vip">Vip</div>
+                <div class="popup__text">Для приобретения привилегии "Vip" свяжитесь с главным администратором сервера в телеграме или в стиме.</div>
+                <div class="popup__buttons">
+                    <a href="#" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
+                    <a href="#" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup_buy_admin" class="popup">
+        <a href="#header" class="popup__area"></a>
+        <div class="popup__body">
+            <div class="popup__content">
+                <a href="#header" class="popup__close"><img src="img/close-icon.svg" alt="X"></a>
+                <div class="popup__title_admin">Admin</div>
+                <div class="popup__text">
+                     Для приобретения привилегии "Admin" свяжитесь с главным администратором сервера в телеграме или в стиме.
+                     <div class="popup__admin_rule">
+                        <p class="popup__criteria_title">КРИТЕРИИ ДЛЯ ВОЗМОЖНОСТИ ПОКУПКИ: </p>
+                        <p class="popup__criteria_text">Возраст от 16 лет и старше. Соблюдение всех правил проекта и согласие с договором оферты.</p>
+                        <p class="popup__criteria_text">При поступлении более 3-х или более жалоб - Снятие без возмещения средств!</p>
+                     </div>
+                </div>
+                <div class="popup__buttons">
+                    <a href="#" class="popup__buy_btnT"><img src="img/telegram-icon.svg" alt="Telegram"></a>
+                    <a href="#" class="popup__buy_btnS"><img src="img/steam-icon.svg" alt="Steam"></a>
+                </div>
+                
             </div>
         </div>
     </div>
